--- a/app/src/main/res/menu/uppermenu.xml
+++ b/app/src/main/res/menu/uppermenu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/starButton"
+        android:icon="@drawable/ic_baseline_star_24"
+        android:title="star_button"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/refreshButton"
         android:icon="@drawable/ic_baseline_refresh_24"
         android:title="refresh_button"
