--- a/app/src/main/res/layout-land/activity_astro_weather.xml
+++ b/app/src/main/res/layout-land/activity_astro_weather.xml
@@ -25,29 +25,13 @@
         android:text="@string/textview"
         android:gravity="center_horizontal" />
 
-    <LinearLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="11"
         android:orientation="horizontal"
-        android:baselineAligned="false">
-
-        <FrameLayout
-            android:id="@+id/frameSunLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/frameMoonLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-        </FrameLayout>
-    </LinearLayout>
+        android:padding="20dp" />
 
 
 </LinearLayout>
