--- a/app/src/main/res/layout-sw600dp-land/activity_astro_weather.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_astro_weather.xml
@@ -25,30 +25,12 @@
         android:text="@string/textview"
         android:gravity="center_horizontal" />
 
-    <LinearLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="11"
         android:orientation="horizontal"
-        android:baselineAligned="false">
-
-        <fragment
-            android:id="@+id/sunFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            class="com.example.astroweather.SunFragment">
-
-        </fragment>
-
-        <fragment
-            android:id="@+id/moonFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            class="com.example.astroweather.MoonFragment">
-
-        </fragment>
-    </LinearLayout>
+        android:padding="20dp" />
 
 </LinearLayout>
