--- a/app/src/main/res/layout-sw600dp/activity_astro_weather.xml
+++ b/app/src/main/res/layout-sw600dp/activity_astro_weather.xml
@@ -25,22 +25,21 @@
         android:text="@string/textview"
         android:gravity="center_horizontal" />
 
-    <fragment
-        android:id="@+id/sunFragment"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        class="com.example.astroweather.SunFragment">
+        android:layout_height="0dp"
+        android:layout_weight="11"
+        android:orientation="horizontal"
+        android:padding="20dp" />
 
-    </fragment>
-
-    <fragment
-        android:id="@+id/moonFragment"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        class="com.example.astroweather.MoonFragment">
+        android:layout_height="0dp"
+        android:layout_weight="11"
+        android:orientation="horizontal"
+        android:padding="20dp" />
 
-    </fragment>
 
 </LinearLayout>
